--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,8 @@
         "php-di/php-di": "^7.0",
         "slim/psr7": "^1.6",
         "slim/slim": "^4.14"
+        "slim/csrf": "^1.3.0"
+        "slim/twig-view": "^1.3.0"
     },
     "require-dev": {
         "jangregor/phpstan-prophecy": "^1.0.0",
